--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": " https://swist92.github.io/about/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
